--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Changes from Version 0.9-6 to 0.9-7 [July 31 2017]
+* updated vignettes
+* CRAN version
+
 Changes from Version 0.9-5 to 0.9-6 [April 24 2017]
 * many bugs fixed
 * CRAN version
