--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -39,13 +39,11 @@
   Number                   = {1},
   Pages                    = {39--41},
   Volume                   = {9},
-
   Abstract                 = {Adaptive technologies are helping researchers combine and organize experimental results.},
   Copyright                = {© 2012 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
-  Doi                      = {10.1038/nmeth.1815},
   ISSN                     = {1548-7091},
   Shorttitle               = {Quantitative data},
-  Url                      = {http://www.nature.com/nmeth/journal/v9/n1/full/nmeth.1815.html},
+  Url                      = {www.nature.com/nmeth/journal/v9/n1/abs/nmeth.1815.html},
   Urldate                  = {2015-08-08}
 }
 
