--- a/vignettes/usingRDML_with_other_R_packages.Rmd
+++ b/vignettes/usingRDML_with_other_R_packages.Rmd
@@ -9,6 +9,10 @@ pandoc_args: [
 "--number-sections"
 ]
 bibliography: "RDML.bib"
+vignette: >
+  %\VignetteIndexEntry{Using RDML with other R packages}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 ```{r, echo=FALSE, message=FALSE}
 knitr::opts_chunk$set(collapse=T, comment="#>")
