--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Changes from Version 0.9-9 to 0.9-99 [February 14 2019]
+* version 1 prerelease
+
 Changes from Version 0.9-8 to 0.9-9 [September 25 2017]
 * introduced shortcut copy() for clone(deep = TRUE)
 * vignettes corrected
