--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Changes from Version 1.0 to 1.1 [September 17 2019]
+* many code optimizations (e.g. datapoints parsing by regex without xml2) - 
+  rdml import up to two times faster 
+
 Changes from Version 0.9-99 to 1.0 [June 25 2019]
 * version 1 CRAN
 
